--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,14 +10,21 @@ pool:
 steps:
 - script: |
     ./docs.sh
-    git config --local user.name "tkonradsson"
-    git config --local user.email "tkonradsson@vectoritcgroup.com"
+    git config --local user.name "Azure Pipelines"
+    git config --local user.email "azuredevops@microsoft.com"
     git add .
     git commit -m "Publishing GitHub Pages  ***NO_CI***"
   displayName: 'Build and commit pages'
 
-- script: |
+- task: DownloadSecureFile@1
+  inputs:
+    secureFile: deploy_key
+  displayName: 'Get the deploy key'
 
+- script: |
+    mkdir ~/.ssh && mv $DOWNLOADSECUREFILE_SECUREFILEPATH ~/.ssh/id_rsa
+    chmod 700 ~/.ssh && chmod 600 ~/.ssh/id_rsa
+    ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
     git remote set-url --push origin git@github.com:tlpz-docs/tlpz-docs.github.io.git
     git push origin HEAD:master
   displayName: 'Publish GitHub Pages'
