--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,12 +10,11 @@ pool:
 steps:
 - script: |
     ./docs.sh
-    git config --local user.name "tkonradsson"
-    git config --local user.email "tkonradsson@vectoritcgroup.com"
+    git config --local user.name "Azure Pipelines"
+    git config --local user.email "azuredevops@microsoft.com"
     git add .
     git commit -m "Publishing GitHub Pages  ***NO_CI***"
   displayName: 'Build and commit pages'
-
 
 - task: DownloadSecureFile@1
   inputs:
