--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,19 +4,17 @@
 trigger:
 - master
 
+pool:
+  vmImage: 'Ubuntu-16.04'
 
 steps:
 - script: |
-    git config --local user.name "tlpz-docs"
+    ./docs.sh
+    git config --local user.name "tkonradsson"
     git config --local user.email "tkonradsson@vectoritcgroup.com"
     git add .
     git commit -m "Publishing GitHub Pages  ***NO_CI***"
   displayName: 'Build and commit pages'
-
-- task: DownloadSecureFile@1
-  inputs:
-    secureFile: deploy_key
-  displayName: 'Get the deploy key'
 
 - script: |
     git remote set-url --push origin git@github.com:tlpz-docs/tlpz-docs.github.io.git
