--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,8 +11,8 @@ steps:
 - script: |
     git config --local user.name "tlpz-docs"
     git config --local user.email "tkonradsson@vectoritcgroup.com"
-    git add index.html
-    git commit -m "Publishing GitHub Pages  ***NO_CI***"
+    git add --all
+    git commit -m "Publishing GitHub Pages"
   displayName: 'Build and commit pages'
 
 - task: DownloadSecureFile@1
