--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,7 @@ steps:
 - script: |
     git config --local user.name "tlpz-docs"
     git config --local user.email "tkonradsson@vectoritcgroup.com"
+    git checkout master
     git add .
     git commit -m "Publishing GitHub Pages"
   displayName: 'Build and commit pages'
