--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,4 @@
 # Publish GitHub Pages
-- task: CmdLine@2
-  inputs:
-    script: |
-      echo Write your commands here
-      
-      echo Hello world
 # azure-pipelines.yml
 
 trigger:
@@ -19,7 +13,7 @@ steps:
     git config --local user.name "tlpz-docs"
     git config --local user.email "tkonradsson@vectoritcgroup.com"
     git checkout master
-    git add -A
+    git remote add origin git@ssh.dev.azure.com:v3/TelepizzaIT/Documentation/Documentation
     git commit -m "Publishing GitHub Pages"
   displayName: 'Build and commit pages'
 
