--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
     git config --local user.name "tlpz-docs"
     git config --local user.email "tkonradsson@vectoritcgroup.com"
     git checkout master
-    git remote add origin git@ssh.dev.azure.com:v3/TelepizzaIT/Documentation/Documentation
+    git add origin git@ssh.dev.azure.com:v3/TelepizzaIT/Documentation/Documentation
     git commit -m "Publishing GitHub Pages"
   displayName: 'Build and commit pages'
 
