Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,9 +9,9 @@ pool:
 
 steps:
 - script: |
-    ./docs.sh
     git config --local user.name "Azure Pipelines"
     git config --local user.email "azuredevops@microsoft.com"
+    git pull remote
     git add .
     git commit -m "Publishing GitHub Pages  ***NO_CI***"
   displayName: 'Build and commit pages'
