--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,8 @@ steps:
 - script: |
     git config --local user.name "tlpz-docs"
     git config --local user.email "tkonradsson@vectoritcgroup.com"
-    git pull https://github.com/tlpz-docs/tlpz-docs.github.io.git
+    git fetch https://github.com/tlpz-docs/tlpz-docs.github.io.git
+    git pull
     git add .
     git commit -m "Publishing GitHub Pages  ***NO_CI***"
   displayName: 'Build and commit pages'
