--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ steps:
     git config --local user.name "tlpz-docs"
     git config --local user.email "tkonradsson@vectoritcgroup.com"
     git fetch https://github.com/tlpz-docs/tlpz-docs.github.io.git
-    git pull
+    git pull https://github.com/tlpz-docs/tlpz-docs.github.io
     git add .
     git commit -m "Publishing GitHub Pages  ***NO_CI***"
   displayName: 'Build and commit pages'
