--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,8 +11,7 @@ steps:
 - script: |
     git config --local user.name "tlpz-docs"
     git config --local user.email "tkonradsson@vectoritcgroup.com"
-    git remote set-url --push origin git@github.com:tlpz-docs/tlpz-docs.github.io.git
-    git pull https://github.com/tlpz-docs/tlpz-docs.github.io
+    git remote set-url --pull origin git@github.com:tlpz-docs/tlpz-docs.github.io.git
     git add .
     git commit -m "Publishing GitHub Pages  ***NO_CI***"
   displayName: 'Build and commit pages'
